--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@ confusionMatrix(pred, testing$classe)</code></pre>
 ## Detection Prevalence   0.2853   0.1945   0.1743   0.1627   0.1831
 ## Balanced Accuracy      0.9989   0.9961   0.9915   0.9925   0.9983</code></pre>
 <p>Out of sample error rate of 0.65%:</p>
-<pre class="r"><code>error &lt;- sum(pred != testing$classe)/length(pred)*100</code></pre>
+<pre class="r"><code>sum(pred != testing$classe)/length(pred)*100</code></pre>
+<pre><code>## [1] 0.6525285</code></pre>
 </div>
 <div id="results" class="section level3">
 <h3>Results</h3>
